--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Marwaahmedfouad.github.io/myResume",
+  "homepage": "https://Marwaahmedfouad.github.io/myportfolio",
   "name": "project",
   "version": "0.1.0",
   "private": true,
